[gd_scene load_steps=19 format=3 uid="uid://cyf2m5wwd46n7"]

[ext_resource type="Script" path="res://worldgen.gd" id="1_fv3e0"]
[ext_resource type="Script" path="res://playa.gd" id="2_jucig"]
[ext_resource type="TileSet" uid="uid://c7srjvfqxhngg" path="res://floors.tres" id="3_2e4ck"]
[ext_resource type="Texture2D" uid="uid://dosk81oo4sruo" path="res://light2.png" id="3_iigyu"]
[ext_resource type="Texture2D" uid="uid://cmcaws7ut5sh0" path="res://walls.png" id="4_usvvq"]
[ext_resource type="Texture2D" uid="uid://bo8blwb5mbysq" path="res://gasses.png" id="5_lrsb0"]
[ext_resource type="Script" path="res://gashandler.gd" id="5_t1fsv"]
[ext_resource type="TileSet" uid="uid://bsy7cmorqt6ob" path="res://GAS.tres" id="7_4ocxr"]
[ext_resource type="PackedScene" uid="uid://tbsve3tnulhk" path="res://tree.tscn" id="9_2sjg8"]
[ext_resource type="PackedScene" uid="uid://c207kljysnh6c" path="res://game_item.tscn" id="10_6qs8f"]
[ext_resource type="Texture2D" uid="uid://cn1mq1lqkpy5v" path="res://items/stone_2.png" id="11_v0hff"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sof6h"]
radius = 22.6274

[sub_resource type="CircleShape2D" id="CircleShape2D_7yfff"]
radius = 48.0

[sub_resource type="GDScript" id="GDScript_p4gok"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8i6tv"]
texture = ExtResource("4_usvvq")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_right_corner = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
2:0/0/terrains_peering_bit/top_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:0/0/terrains_peering_bit/right_side = 0
3:0/0/terrains_peering_bit/bottom_right_corner = 0
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0/terrains_peering_bit/left_side = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
2:1/0/terrains_peering_bit/top_right_corner = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_left_corner = 0
3:1/0/terrains_peering_bit/top_side = 0
3:1/0/terrains_peering_bit/top_right_corner = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:2/0/terrains_peering_bit/bottom_side = 0
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/bottom_right_corner = 0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
2:2/0/terrains_peering_bit/top_right_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:2/0/terrains_peering_bit/right_side = 0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/bottom_left_corner = 0
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_left_corner = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:3/0/terrains_peering_bit/right_side = 0
0:3/0/terrains_peering_bit/bottom_side = 0
0:3/0/terrains_peering_bit/left_side = 0
0:3/0/terrains_peering_bit/top_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/bottom_side = 0
2:3/0/terrains_peering_bit/top_side = 0
2:3/0/terrains_peering_bit/top_right_corner = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:3/0/terrains_peering_bit/bottom_side = 0
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_left_corner = 0
3:3/0/terrains_peering_bit/top_side = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:4/0/terrains_peering_bit/right_side = 0
0:4/0/terrains_peering_bit/bottom_right_corner = 0
0:4/0/terrains_peering_bit/bottom_side = 0
0:4/0/terrains_peering_bit/bottom_left_corner = 0
0:4/0/terrains_peering_bit/left_side = 0
0:4/0/terrains_peering_bit/top_side = 0
0:4/0/terrains_peering_bit/top_right_corner = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/bottom_right_corner = 0
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/bottom_left_corner = 0
1:4/0/terrains_peering_bit/left_side = 0
1:4/0/terrains_peering_bit/top_left_corner = 0
1:4/0/terrains_peering_bit/top_side = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/left_side = 0
2:4/0/terrains_peering_bit/top_side = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/left_side = 0
3:4/0/terrains_peering_bit/top_side = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrain = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:5/0/terrains_peering_bit/right_side = 0
0:5/0/terrains_peering_bit/bottom_right_corner = 0
0:5/0/terrains_peering_bit/bottom_side = 0
0:5/0/terrains_peering_bit/left_side = 0
0:5/0/terrains_peering_bit/top_left_corner = 0
0:5/0/terrains_peering_bit/top_side = 0
0:5/0/terrains_peering_bit/top_right_corner = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/bottom_side = 0
1:5/0/terrains_peering_bit/bottom_left_corner = 0
1:5/0/terrains_peering_bit/left_side = 0
1:5/0/terrains_peering_bit/top_left_corner = 0
1:5/0/terrains_peering_bit/top_side = 0
1:5/0/terrains_peering_bit/top_right_corner = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/bottom_side = 0
2:5/0/terrains_peering_bit/top_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:5/0/terrains_peering_bit/right_side = 0
3:5/0/terrains_peering_bit/bottom_side = 0
3:5/0/terrains_peering_bit/left_side = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/terrain = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:6/0/terrains_peering_bit/right_side = 0
0:6/0/terrains_peering_bit/bottom_side = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:6/0/terrains_peering_bit/bottom_side = 0
1:6/0/terrains_peering_bit/left_side = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:6/0/terrains_peering_bit/bottom_side = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:6/0/terrains_peering_bit/right_side = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/terrain = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:7/0/terrains_peering_bit/right_side = 0
0:7/0/terrains_peering_bit/top_side = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:7/0/terrains_peering_bit/left_side = 0
1:7/0/terrains_peering_bit/top_side = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:7/0/terrains_peering_bit/top_side = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:7/0/terrains_peering_bit/left_side = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
0:8/0/terrain_set = 0
0:8/0/terrain = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:8/0/terrains_peering_bit/right_side = 0
0:8/0/terrains_peering_bit/bottom_right_corner = 0
0:8/0/terrains_peering_bit/bottom_side = 0
0:8/0/terrains_peering_bit/bottom_left_corner = 0
0:8/0/terrains_peering_bit/left_side = 0
0:8/0/terrains_peering_bit/top_left_corner = 0
0:8/0/terrains_peering_bit/top_side = 0
0:8/0/terrains_peering_bit/top_right_corner = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0

[sub_resource type="TileSet" id="TileSet_jmuw6"]
tile_size = Vector2i(48, 48)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "ass"
terrain_set_0/terrain_0/color = Color(0.725635, 0, 0.150821, 1)
sources/0 = SubResource("TileSetAtlasSource_8i6tv")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6l2ou"]
texture = ExtResource("5_lrsb0")
texture_region_size = Vector2i(48, 48)
0:0/next_alternative_id = 5
0:0/0 = 0
0:0/1 = 1
0:0/2 = 2
0:0/3 = 3
0:0/4 = 4
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
0:3/0 = 0
0:4/0 = 0
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
1:7/0 = 0
1:6/0 = 0
1:5/0 = 0
1:4/0 = 0
1:3/0 = 0
1:2/0 = 0
2:0/0 = 0
2:1/0 = 0
2:2/0 = 0
2:3/0 = 0
2:4/0 = 0
2:5/0 = 0
2:6/0 = 0
2:7/0 = 0

[sub_resource type="TileSet" id="TileSet_3oib2"]
tile_size = Vector2i(48, 48)
sources/0 = SubResource("TileSetAtlasSource_6l2ou")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_fv3e0")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
z_index = 9
position = Vector2(-144, -24)
motion_mode = 1
script = ExtResource("2_jucig")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_sof6h")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(216, -4)

[node name="Control" type="Control" parent="CharacterBody2D/Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 256.0
offset_top = -323.0
offset_right = 296.0
offset_bottom = -283.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="CharacterBody2D/Camera2D/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 8.0
anchor_bottom = 16.175
offset_bottom = -6.10352e-05
grow_horizontal = 0
grow_vertical = 2
current_tab = 0

[node name="Happenings" type="Panel" parent="CharacterBody2D/Camera2D/Control/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="TextEdit" type="TextEdit" parent="CharacterBody2D/Camera2D/Control/TabContainer/Happenings"]
layout_mode = 0
offset_top = 576.0
offset_right = 232.0
offset_bottom = 616.0
placeholder_text = "u  can type here"
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Button" type="Button" parent="CharacterBody2D/Camera2D/Control/TabContainer/Happenings"]
layout_mode = 0
offset_left = 232.0
offset_top = 576.0
offset_right = 320.0
offset_bottom = 616.0
text = "button"

[node name="ScrollContainer" type="ScrollContainer" parent="CharacterBody2D/Camera2D/Control/TabContainer/Happenings"]
clip_contents = false
layout_mode = 0
offset_right = 320.0
offset_bottom = 576.0

[node name="RichTextLabel" type="RichTextLabel" parent="CharacterBody2D/Camera2D/Control/TabContainer/Happenings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test
test"
scroll_following = true
visible_characters_behavior = 1

[node name="ItemList" type="ItemList" parent="CharacterBody2D/Camera2D/Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Equip" type="Panel" parent="CharacterBody2D/Camera2D/Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Panel2" type="Panel" parent="CharacterBody2D/Camera2D/Control/TabContainer/Equip"]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 56.0
offset_bottom = 57.0
tooltip_text = "head"

[node name="Panel3" type="Panel" parent="CharacterBody2D/Camera2D/Control/TabContainer/Equip"]
layout_mode = 0
offset_left = 72.0
offset_top = 9.0
offset_right = 120.0
offset_bottom = 57.0
tooltip_text = "shirt"

[node name="Panel4" type="Panel" parent="CharacterBody2D/Camera2D/Control/TabContainer/Equip"]
layout_mode = 0
offset_left = 136.0
offset_top = 9.0
offset_right = 184.0
offset_bottom = 57.0
tooltip_text = "pants
"

[node name="Panel5" type="Panel" parent="CharacterBody2D/Camera2D/Control/TabContainer/Equip"]
layout_mode = 0
offset_left = 200.0
offset_top = 9.0
offset_right = 248.0
offset_bottom = 57.0
tooltip_text = "boots"

[node name="Panel6" type="Panel" parent="CharacterBody2D/Camera2D/Control/TabContainer/Equip"]
layout_mode = 0
offset_left = 264.0
offset_top = 9.0
offset_right = 312.0
offset_bottom = 57.0
tooltip_text = "backpack"

[node name="Panel7" type="Panel" parent="CharacterBody2D/Camera2D/Control/TabContainer/Equip"]
layout_mode = 0
offset_left = 8.0
offset_top = 73.0
offset_right = 120.0
offset_bottom = 185.0

[node name="Label" type="Label" parent="CharacterBody2D/Camera2D/Control/TabContainer/Equip/Panel7"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.786
anchor_right = 2.714
anchor_bottom = 3.0
offset_left = 128.0
offset_top = 88.032
offset_right = 0.0319824
offset_bottom = -224.0
text = "penis poopnis"

[node name="ItemList" type="ItemList" parent="CharacterBody2D/Camera2D/Control/TabContainer/Equip"]
layout_mode = 0
offset_left = 8.0
offset_top = 201.0
offset_right = 312.0
offset_bottom = 609.0

[node name="PointLight2D" type="PointLight2D" parent="CharacterBody2D"]
range_layer_max = 1
shadow_enabled = true
shadow_color = Color(0.0784314, 0.0784314, 0.0784314, 0.384314)
shadow_filter = 1
texture = ExtResource("3_iigyu")
texture_scale = 1.89
height = 30.0

[node name="hand_r" type="Panel" parent="CharacterBody2D"]
offset_left = 8.0
offset_top = 272.0
offset_right = 48.0
offset_bottom = 312.0

[node name="hand_l" type="Panel" parent="CharacterBody2D"]
offset_left = -48.0
offset_top = 272.0
offset_right = -8.0
offset_bottom = 312.0

[node name="Area2D" type="Area2D" parent="CharacterBody2D"]
collision_mask = 2
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Area2D"]
shape = SubResource("CircleShape2D_7yfff")

[node name="listedThings" type="Tree" parent="CharacterBody2D"]
offset_left = -72.0
offset_top = -232.0
offset_right = 76.0
offset_bottom = -24.0
script = SubResource("GDScript_p4gok")

[node name="baseturf" type="TileMapLayer" parent="."]
tile_set = ExtResource("3_2e4ck")

[node name="placed_floors" type="TileMapLayer" parent="baseturf"]

[node name="placed_walls" type="TileMapLayer" parent="baseturf"]
tile_set = SubResource("TileSet_jmuw6")

[node name="objects" type="TileMapLayer" parent="baseturf"]

[node name="pipes" type="TileMapLayer" parent="baseturf"]

[node name="CanvasModulate" type="CanvasModulate" parent="baseturf"]
visible = false
color = Color(0, 0, 0, 1)

[node name="gas" type="TileMapLayer" parent="baseturf"]
tile_set = SubResource("TileSet_3oib2")
script = ExtResource("5_t1fsv")

[node name="fire" type="TileMapLayer" parent="baseturf/gas"]
tile_set = ExtResource("7_4ocxr")

[node name="h2o" type="TileMapLayer" parent="baseturf/gas"]
tile_set = ExtResource("7_4ocxr")

[node name="co2" type="TileMapLayer" parent="baseturf/gas"]
tile_set = ExtResource("7_4ocxr")

[node name="h2o2" type="TileMapLayer" parent="baseturf/gas"]
tile_set = ExtResource("7_4ocxr")

[node name="c3h8" type="TileMapLayer" parent="baseturf/gas"]

[node name="Node2D" type="Node2D" parent="baseturf"]

[node name="StaticBody2D" parent="." instance=ExtResource("9_2sjg8")]

[node name="GameItem" parent="." instance=ExtResource("10_6qs8f")]
itemName = "stone"
defaultTexture = ExtResource("11_v0hff")

[connection signal="body_shape_entered" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_body_shape_exited"]
[connection signal="item_activated" from="CharacterBody2D/listedThings" to="CharacterBody2D" method="_on_listed_things_item_activated"]
